# txtify

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_linux.txt  requirements_windows.txt  vercel.json
.claude/agents/: txtify-qa.md  txtify-reviewer.md
.claude/skills/deps-bump/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: docker-e2e.yml  docker-image.yml  published-image-check.yml  tests.yml
output/: 14_logs.txt
scripts/: benchmark.sh  docker_e2e.sh
src/: db.py  deepl_languages.py  main.py  models.py  requirements.txt  transcribe_process.py  utils.py
static/: contact_scripts.js  faq_scripts.js  scripts.js  styles.css  supported_languages_ASR.json  supported_languages_TR.json
templates/: contact.html  error.html  faq.html  index.html
tests/: conftest.py  test_api.py  test_db.py  test_models.py  test_utils.py
