[tool.poetry]
name = "txtify"
version = "0.1.0"
description = "Web app that converts audio and video to text using AI, supporting various formats and self-hosting."
authors = ["lkmeta <louiskmeta@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.16"
uvicorn = "0.22.0"
fastapi = "0.115.0"
deepl = "1.19.1"
fpdf = "1.7.2"
loguru = "0.7.2"
psutil = "5.9.8"
pydub = "0.25.1"
pytest = "8.2.2"
python-dotenv = "1.0.1"
resend = "2.1.0"
srt = "3.5.3"
torch = "2.4.1"
transformers = "4.44.2"
webvtt-py = "0.5.1"
yt-dlp = "2024.8.6"
python-multipart = "0.0.18"
accelerate = "0.21.0"
llvmlite = "0.43.0" 
stable-ts = "2.18.0"
numba = "^0.60.0"



[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.5"
mypy = "^1.14.1"
isort = "^5.13.2"
interrogate = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
